getTraineeTrainings refactoring